= Changelog

== Version 2.1.0

[small]#Released at 21.12.2015#

* https://github.com/svenkubiak/mangooio/issues/102[#102] Made Cache eviction configurable (MarkVink)
* https://github.com/svenkubiak/mangooio/issues/101[#101] Fixed keys in archetype (MarkVink)
* https://github.com/svenkubiak/mangooio/issues/97[#97] Fixed incorrect Form documentation (svenkubiak, MarkVink)
* https://github.com/svenkubiak/mangooio/issues/94[#95] Added new @memory administrative URL (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/94[#94] Added new @system administrative URL (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/93[#93] Improved DispatcherHandler/RequestHandler (svenkubiak)
* Updated documentation (svenkubiak, MarkVink)
* Version bumps (svenkubiak)
** log4j 2.4.1 -> 2.5
** mockito 2.0.31-Beta -> 2.0.33-Beta

== Version 2.0.2

[small]#Released at 17.12.2015#

* https://github.com/svenkubiak/mangooio/issues/91[#91] Added numeric validation (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/90[#90] Added JSONUtils for custom serialization with annotations (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/89[#89] Added Internal Server Error to Response class (svenkubiak)
* Sonar refactorings (svenkubiak)
* Updated documentation (svenkubiak)

== Version 2.0.1

[small]#Released at 13.12.2015#

* Fixed bug in documentation asciidoc file (svenkubiak)

== Version 2.0.0

[small]#Released at 13.12.2015#

* https://github.com/svenkubiak/mangooio/issues/79[#79] Add Server-Sent Events handler (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/78[#78] Switched to plugin and dependency management in root pom.xml (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/69[#69] Restructured integration tests (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/76[#76] Improved handling of values in forms (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/77[#77] Added option for adding custom cookies (svenkubiak)